--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,13 +8,13 @@ nav:
     - Sprints: "Planejamento/cronograma.md"
   - Engenharia de Requisitos:
     - Elicitação:
+      - Requisitos do Projeto: Elicitacao/requisitosProduto.md
+      - Requisitos de Machine Learning: Elicitacao/requisitosML.md
       - Backlog: Elicitacao/backlog.md
-    - Requisitos do Projeto: "Design_thinking/requisitosProduto.md"
-    - Requisitos de Maquine Learning: "Design_thinking/requisitosML.md"
+      - Histórias de Usuário: Elicitacao/historias_de_usuario.md
     - Artefatos: "Design_thinking/design_thinking.md"
     - Mapeamento de Dados: "Design_thinking/mapeamento_dados.md"
     - História do Usuário: "Design_thinking/us.md"
-   
 
 extra_css:
   - stylesheets/extra.css
