docs: Alterando nome da aplicação para AlugAI

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Grupo 09 – PrediAluguel 
+site_name: Grupo 09 – AlugAI
 site_url: https://unb-sistemas-de-machine-learning.github.io/Grupo09-PrediAluguel/
 repo_url: https://github.com/unb-Sistemas-de-Machine-learning/Grupo09-PrediAluguel
 
